feat: 지역지정 검색 기능 (#34)
검색기능 구현, UI 수정 등